--- a/docker-toyproject/UserService/UserService/src/main/resources/application.yaml
+++ b/docker-toyproject/UserService/UserService/src/main/resources/application.yaml
@@ -1,1 +1,11 @@
+spring:
+  datasource:
+    url: jdbc:mysql://userdb:3306/user_db
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
